Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49437

QInputDialog hangs if VoiceOver is enabled on El Capitain

XMLWordPrintable

      Put the following code in a widget based Qt app:

      bool ok;
      QString str = QInputDialog::getText(this, tr("Foo bar"),
      tr("More foo:"),
      QLineEdit::Password, "bar", &ok);

      Enable VoiceOver (cmd+F5) and run the above code. Once you start typing in the input field the application hangs.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            frederik Frederik Gladhorn
            bear101 Bjoern D. Rasmussen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes