src/plugins/platforms/cocoa/qcocoaaccessibilityelement.mm
@@ -336,9 +336,11 @@ static void convertLineOffset(QAccessibleTextInterface *text, int *line, int *of
 
     } else if ([attribute isEqualToString:NSAccessibilityInsertionPointLineNumberAttribute]) {
         if (QAccessibleTextInterface *text = iface->textInterface()) {
-            int line = -1;
-            int position = text->cursorPosition();
-            convertLineOffset(text, &line, &position);
+            int line = 0; // true for all single line edits
+            if (iface->state().multiLine) {
+                int position = text->cursorPosition();
+                convertLineOffset(text, &line, &position);
+            }
             return [NSNumber numberWithInt: line];
         }
         return nil;
